more tweaks to fix appearance on mobile

--- a/style.css
+++ b/style.css
@@ -82,17 +82,20 @@ body {
   border: none;
   border-bottom: 2px solid white;
   box-shadow: none;
+  /* -webkit-appearance: none;
+  -webkit-border-radius: 0; */
+  border-radius: 0;
 }
 
 .tempo-field {
-  margin: 3vw 0;
+
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 200px;
   padding: 0;
   margin: 0;
-  border-radius: 0;
 }
 
 .bpm {
